--- a/index.html
+++ b/index.html
@@ -1,56 +1,73 @@
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>My Projects - Dakshesh Ravindranath</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Dakshesh Ravindranath</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <a class="header-title" href="about.html">My Projects</a>
+    <a class="header-title" href="about.html">My Portfolio</a>
   </header>
+
   <main>
     <nav>
       <a class="sites" href="index.html">Home</a>
-      <a class="sites active" href="projects.html">My Best Works</a>
+      <a class="sites" href="project.html">My Best Works</a>
       <a class="info" href="info.html">Useful Information</a>
     </nav>
-    <section class="project-section">
 
-      <article class="project">
-        <h3>Bit Market</h3>
-        <p>Bit Market is a place where you buy phones, laptops, and headphones.</p>
-        <div class="button-wrapper">
-          <a class="project-button" href="https://zarex868.github.io/m7-project/" target="_blank">View Project</a>
+    <div class="container">
+      <div class="details">
+        <h1>Dakshesh Ravindranath</h1>
+        <div class="birthday">
+          <p class="description">Birthday</p>
+          <p class="value">30 November 2015</p>
         </div>
-      </article>
+        <div class="hobby">
+          <p class="description">Hobbies</p>
+          <ul>
+            <li>Play outdoor</li>
+            <li>Coding</li>
+            <li>Play games</li>
+          </ul>
+        </div>
+      </div>
+      <div class="picture">
+        <img src="https://images.pexels.com/photos/1619697/pexels-photo-1619697.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"alt="Profile Picture" />
+      </div>
+    </div>
 
-      <article class="project">
-        <h3>Robot shop</h3>
-        <p>Robot shop is where you buy parts to fix your Robot and you also can buy Robots.</p>
-        <div class="button-wrapper">
-          <a class="project-button" href="https://zarex868.github.io/Robot-shop/" target="_blank">View Project</a>
-        </div>
-      </article>
+    <h3>Course Output</h3>
+    <div class="cards">
+      <section class="card">
+        <article class="card-item">
+          <p>Wix</p>
+          <img src="https://cdn.freebiesupply.com/logos/large/2x/wix-logo-png-transparent.png" alt="Wix Screenshot" />
+          <p class="description">Used Wix to create simple drag-and-drop websites easily.</p>
+        </article>
 
-      <article class="project">
-        <h3>pixel design</h3>
-        <p>pixel design is where you guys can create website.</p>
-        <div class="button-wrapper">
-          <a class="project-button" href="https://zarex868.github.io/pixel-design/" target="_blank">View Project</a>
-        </div>
-      </article>
+        <article class="card-item">
+          <p>Figma</p>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/3/33/Figma-logo.svg" alt="Figma Logo" />
+          <p class="description">Designed UI mockups using Figma’s vector-based tools.</p>
+        </article>
 
-      <article class="project">
-        <h3>Gadget store</h3>
-        <p>Gadget store is where you buy accessories for your phone and repair your phone too.</p>
-        <div class="button-wrapper">
-          <a class="project-button" href="https://zarex868.github.io/Gadget-store/" target="_blank">View Project</a>
-        </div>
-      </article>
-    </section>
-    <footer>
+        <article class="card-item">
+          <p>HTML & CSS</p>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg" alt="HTML & CSS Logo" />
+          <p class="description">Learned how to build and style web pages with HTML and CSS.</p>
+        </article>
+
+        <article class="card-item">
+          <p>GitHub</p>
+          <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo" />
+          <p class="description">Published and managed code repositories on GitHub.</p>
+        </article>
+      </section>
+      <footer>
         <a href="https://GitHub.com/zarex868">My Github</a>
       </footer>
+    </div>
   </main>
 </body>
 </html>
