--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <main>
     <nav>
       <a class="sites" href="index.html">Home</a>
-      <a class="sites" href="project.html">My Best Works</a>
+      <a class="sites" href="projects.html">My Best Works</a>
       <a class="info" href="info.html">Useful Information</a>
     </nav>
 
